# prithvi_precip

./: prithvi_precip.yml  pyproject.toml
notebooks/e3sm/: data_preparation.ipynb  getting_started.ipynb  training_and_inference.ipynb
src/prithvi_precip/: __init__.py  cli.py  datasets.py  domains.py  e3sm.py  mlp.py  plotting.py  utils.py
src/prithvi_precip/data/: __init__.py  era5_precip.py  imerg.py  merra2.py  merra2_precip.py  mrms.py  spc.py  stage4.py
src/prithvi_precip/files/: prithvi_precip.mplstyle
src/prithvi_precip/obs/: cpcir.py  goes.py  gpm.py  gridsat.py  gridsat_goes.py  utils.py
tests/: test_datasets.py  test_e3sm.py
